# flask_notes

./: pyproject.toml
fnotes/: __main__.py  app.py  model.py
fnotes/blueprints/rest/: __init__.py  resources.py
fnotes/blueprints/web/: __init__.py  views.py
fnotes/blueprints/web/templates/: base.html  login.html
fnotes/ext/: auth.py  config.py  database.py  jwt.py  login.py
